src/example_tbs/dma_axi/dma_axi32_core0_ch_calc/compile_result.txt
file: dma_axi32_core0_ch_calc.v
module: dma_axi32_core0_ch_calc
status: FAIL
slang_output:

Build failed: 2 errors, 0 warnings
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_calc.v:64:11: error: unknown macro or compiler directive '`FRAME_BITS'
   input [`FRAME_BITS-1:0]  frame_width;
          ^~~~~~~~~~~
import/dma_axi/src/dma_axi32/dma_axi32_core0_ch_calc.v:65:11: error: unknown macro or compiler directive '`X_BITS'
   input [`X_BITS-1:0]         x_size;
          ^~~~~~~

